# fundgruben-sniper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
src/ikea_sniper/: __init__.py  __main__.py  config.py  errors.py  logging_config.py  main.py  scraper.py  search.py  status.py  telegram.py
tests/: test_config.py  test_scraper.py  test_search.py  test_status.py  test_telegram.py
